feat: Base plugin